SERVER-85577 Fix missing fields in KeyString causing incorrect point bound validation (#18307)

GitOrigin-RevId: 454abad445a966c8bc6f7e251d71e7ac410d6676