src/mongo/db/storage/key_string.h
@@ -522,6 +522,8 @@ public:
 
     size_t getApproximateSize() const;
 
+    int computeElementCount(Ordering ord) const;
+
 private:
     Version _version;
     // _ksSize is the total length that the KeyString takes up in the buffer.
